# eigen_course

./: .gitignore  CMakeLists.txt  README.md
docs/: requirements.txt
docs/source/: conf.py  exercises.rst  index.rst  links.rst  schedule.rst  setup.rst  solutions.rst
include/: calfem_eig.h  utils_print.h
include/img/: Image.h
source/: conf.py  index.rst
src/: calfem_eig.cpp  calfem_eig.h  eigen_c_arrays1.cpp  ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp  ex05.cpp  ex06.cpp  ex07.cpp  ex08.cpp  ex09.cpp  ex10.cpp  ex11.cpp  ex12.cpp  ex13.cpp  ex14.cpp  ex15.cpp  live_coding.cpp  matrix1_eig.cpp  matrix2_eig.cpp  matrix3_eig.cpp  matrix4_eig.cpp  matrix5_eig.cpp
